# tsukuba_newspaper_remake

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
backend/: main.py  pyproject.toml  search.py
backend/search/: bm25_search.py  hybrid_search.py  search.py  vec_search.py
data/: change_image.py  change_txt.py  embedding.py  get_pdf.py  pyproject.toml  tokeniz.py
frontend/: package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/search/: route.ts
frontend/src/app/components/: search.tsx
frontend/src/app/search/: page.tsx
